# DK-Doctor

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  EULA.md  LICENSE  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  false_positive.yml  feature_request.yml
.github/workflows/: ci.yml  desktop-build.yml  desktop-release.yml
apps/desktop/: README.md  demo-map.html  demo.html  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
apps/desktop/src/: api.ts  atlas.ts  changelog.ts  demo-map.ts  demo.ts  exportHtml.ts  feedback.ts  group.ts  health.ts  i18n.ts  icons.ts  main.ts  mapgraph.ts  readiness.ts  render.ts  sprites.ts  store.ts  styles.css  summaryCard.ts  tileset.ts  timeline.ts
apps/desktop/src-tauri/: Cargo.toml  rust-toolchain.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: analyze.rs  lib.rs  main.rs  report_json.rs  watch.rs
apps/desktop/src-tauri/tests/: contract_matches_cli.rs
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  config.rs  main.rs
crates/cli/src/render/: console.rs  json.rs  mod.rs
crates/cli/tests/: config_gate.rs  fixture_mv.rs  fixture_mz.rs
crates/core/: Cargo.toml
crates/core/src/: finding.rs  lib.rs  message.rs  remediation.rs  report.rs
crates/core/src/ir/: asset.rs  common_event_summary.rs  dead_branch.rs  edge.rs  entity.rs  graph.rs  location.rs  mod.rs  plugin_meta.rs  self_switch.rs  symbols.rs
crates/core/src/rules/: blocked_tile.rs  broken_assets.rs  broken_transfer.rs  circular_gate.rs  cyclic_common_events.rs  db_reachability.rs  dead_code_after_exit.rs  dead_common_event.rs  dead_self_switch.rs  dead_variables.rs  empty_event_page.rs  impossible_condition.rs  missing_base.rs  mod.rs  orphan_assets.rs  page_index.rs  picture_lifecycle.rs  plugin_conflict.rs  plugin_load_order.rs  referential_integrity.rs  shadowed_page.rs  stuck_autorun.rs  uninit_symbols.rs  unknown_plugin_command.rs  unreachable_maps.rs  unreachable_self_switch.rs  vehicle_start_map.rs
crates/rpgmaker-adapter/: Cargo.toml
crates/rpgmaker-adapter/profiles/: DKTools_Localization.toml  DK_Animated_Icons.toml  DK_Event_Factory.toml  DK_Message_Busts.toml  DK_Picture_Choices.toml
crates/rpgmaker-adapter/src/: assets.rs  atlas.rs  build.rs  codes.rs  command.rs  db_edges.rs  interpreter.rs  lib.rs  profiles.rs  spatial.rs
crates/rpgmaker-adapter/src/plugins/: annotations.rs  collect.rs  js.rs  mine.rs  mod.rs
crates/rpgmaker-adapter/src/raw/: common_event.rs  database.rs  map.rs  mod.rs  plugins.rs  system.rs
docs/: architecture.md  rpgmaker-format-spec.md  rules.md
testdata/mv-fixture/data/: Animations.json  Map001.json  MapInfos.json  System.json
testdata/mv-fixture/js/: plugins.js  rpg_objects.js
testdata/mz-fixture/: PLANTED-BUGS.md
testdata/mz-fixture/data/: Actors.json  Animations.json  Armors.json  Classes.json  CommonEvents.json  Enemies.json  Items.json  Map001.json  Map002.json  Map003.json  MapInfos.json  Skills.json  States.json  System.json  Tilesets.json  Troops.json  Weapons.json
testdata/mz-fixture/effects/: Explosion.efkefc
testdata/mz-fixture/js/: plugins.js
testdata/mz-fixture/js/plugins/: DependentPlugin.js  DisabledPlugin.js  GateCore.js  LatePlugin.js
xtask/: Cargo.toml
xtask/src/: main.rs
