[package]
name = "xtask"
version = "0.1.1"
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
dk-doctor-rpgmaker = { path = "../crates/rpgmaker-adapter" }
clap = { workspace = true }
walkdir = { workspace = true }
camino = { workspace = true }
