[package]
name = "dk-doctor"
version = "0.1.1"
edition.workspace = true
license.workspace = true

[[bin]]
name = "dk-doctor"
path = "src/main.rs"

[dependencies]
dk-doctor-core = { path = "../core" }
dk-doctor-rpgmaker = { path = "../rpgmaker-adapter" }
clap = { workspace = true }
owo-colors = { workspace = true }
anstream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
camino = { workspace = true }
sys-locale = { workspace = true }
