[package]
name = "dk-doctor-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
rustc-hash = { workspace = true }
camino = { workspace = true }
petgraph = { workspace = true, optional = true }

[dev-dependencies]
insta = { workspace = true }

[features]
default = []
graph = ["dep:petgraph"]
