[package]
name = "dk-doctor-rpgmaker"
version = "0.2.0"
edition.workspace = true
license.workspace = true

[dependencies]
dk-doctor-core = { path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
rustc-hash = { workspace = true }
camino = { workspace = true }
ignore = { workspace = true }
walkdir = { workspace = true }
ress = { workspace = true }
toml = { workspace = true }
