[package]
name = "dk-doctor-desktop"
version = "0.2.0"
description = "dk-doctor desktop — static analyzer for RPG Maker MV/MZ projects"
edition = "2021"
# Open source under the MIT License — see LICENSE.
license = "MIT"

# Пустая таблица [workspace] делает крейт СОБСТВЕННЫМ корнем workspace, чтобы
# он НЕ втягивался в корневой workspace репозитория (members = crates/*) и имел
# отдельный target-каталог (apps/desktop/src-tauri/target).
[workspace]

[lib]
name = "dk_doctor_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
camino = { version = "1", features = ["serde1"] }
sys-locale = "0.3"
# Native filesystem watcher (Watch Mode): debounced notify events → re-scan.
notify-debouncer-mini = "0.4"
# Встраиваем анализатор КАК БИБЛИОТЕКУ (путь на три уровня вверх — оба крейта
# подключаются как внешние path-зависимости, без публикации/версий).
dk-doctor-core = { path = "../../../crates/core" }
dk-doctor-rpgmaker = { path = "../../../crates/rpgmaker-adapter" }

[features]
# Переключатель custom-protocol для продакшен-сборок Tauri.
custom-protocol = ["tauri/custom-protocol"]
